--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
           <div class="col-lg-6 col-md-6 col-sm6">
             <div class="latest_slider">
               <div class="slick_slider">
-                <div class="single_iteam"><img src="images/berita2.jpeg" alt=""style="height: 425px;" width="550px">
-                  <h2><a class="slider_tittle" href="pages/single.html">Berita 1</a></h2>
+                <div class="single_iteam"><img src="images/b1.jpeg" alt=""style="height: 350px;" width="550px">
+                  <h2><a class="slider_tittle" href="pages/single.html">Kunci Maju Kembang Organisasi, Pintu Gerbangnya Seleksi SDM</a></h2>
                 </div>
-                <div class="single_iteam"><img src="images/berita3.jpeg" alt=""style="height:425px;" width="550px">
-                  <h2><a class="slider_tittle" href="pages/single2.html">Niaga 2 </a></h2>
+                <div class="single_iteam"><img src="images/b2.jpeg" alt=""style="height:350px;" width="550px">
+                  <h2><a class="slider_tittle" href="pages/artikel.html">3 Hal Yang Menjebak Para Leader</a></h2>
                 </div>
-                <div class="single_iteam"><img src="images/berita4.jpeg" alt="" style="height:425px;" width="550px">
-                  <h2><a class="slider_tittle" href="pages/single.html">Berita 3 </a></h2>
+                <div class="single_iteam"><img src="images/b3.jpeg" alt="" style="height:350px;" width="550px">
+                  <h2><a class="slider_tittle" href="pages/single2.html">Spesial Ayah dan Perannya</a></h2>
                 </div>
-                <div class="single_iteam"><img src="images/berita5.jpeg" alt=""style="height:425px;" width="550px">
+                <div class="single_iteam"><img src="images/berita5.jpeg" alt=""style="height:350px;" width="550px">
                   <h2><a class="slider_tittle" href="pages/single.html">Berita 4</a></h2>
                 </div>
               </div>
