--- a/pages/artikel.html
+++ b/pages/artikel.html
@@ -85,18 +85,31 @@
           <div class="single_page_area">
             <ol class="breadcrumb">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Tema ?</a></li>
-              <li class="active">JUDUL ARTIKEL 1</li>
+              <li><a href="#">Leadership</a></li>
+              <li class="active">3 Hal Yang Menjebak Para Leader</li>
             </ol>
-            <h2 class="post_titile">JUDUL ARTIKEL 1</h2>
+            <h2 class="post_titile">3 Hal Yang Menjebak Para Leader</h2>
             <div class="single_page_content">
-              <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Penulis</a> <span><i class="fa fa-calendar"></i>Jam-tanggal</span> <a href="#"><i class="fa fa-tags"></i>Tema ?</a> </div>
-              <img class="img-center" src="../images/berita2.jpeg" alt="Gambar Artikel">
-              <p>ISI ARTIKEL</p>
-              <blockquote> CATATAN PENTING. </blockquote>
-              <p>ISI ARTIKEL </p>
+              <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wijiatmoko</a> <span><i class="fa fa-calendar"></i>09/09/2022</span> <a href="#"><i class="fa fa-tags"></i>Leadership</a> </div>
+              <img class="img-center" src="../images/b2.jpeg" alt="Gambar Artikel">
+              <p>Para leader tentu berharap dapat mengelola timnya dengan efektif. Karena sasaran dan target organisasi ditentukan oleh sinergitas para leader dan tim. Maka dibutuhkan pendekatan yang tepat agar tim secara sukarela mencapai sasaran yang ditetapkan organisasi.  Para leader memerlukan metode yang tepat untuk memotivasi tim agar memberikan performa terbaiknya dalam mencapai sasaran organisasi.</p>
+              <p>Tak bisa dipungkiri bahwa salah satu tugas pemimpin adalah memotivasi timnya untuk mengoptimalkan seluruh potensi untuk mencapai sasaran organisasi. Akan tetapi para leader terkadang terjebak dengan cara yang kurang tepat dalam memotivasi timnya. Hal apa saja yang sering menjebak para leader.</p>
+              <blockquote> Tak bisa dipungkiri bahwa salah satu tugas pemimpin adalah memotivasi timnya untuk mengoptimalkan seluruh potensi untuk mencapai sasaran organisasi. </blockquote>
+              <p>1.	Uang Sebagai Motivator Terbaik
+
+                Para leader sering menjanjikan reward atau bonus berupa uang pada tim. Dengan harapan tim akan lebih termotivasi dalam memunculkan kinerjanya. Nyatanya motivasi seseorang mengerjakan sesuatu ternyata tidaklah selalu uang, tetapi karena value, lingkungan, kepedulian, dan tanggung jawab yang ada pada dirinya.
+                </p>
+              <p>2.	Sebagai Leader Sayalah Yang Memotivasi Tim
+
+                Hal ini sering menjadi momok para leader, beranggapan bahwa timnya bergerak dikarenakan motivasi seorang pemimpin. Nyatanya motivasi terbaik ialah dari diri tim sendiri. Menjadi tugas para leader memicu agar tim tergerak dengan sendirinya.
+                
+                </p>
+              <p>3.	Rasa Takut Merupaka Motivator Yang Dahsyat
+
+                Mengintimidasi tim dengan harapan mereka akan menuruti yang dikehendaki para leader merupakan perlakuan yang destruktif. Bisa jadi timnya termotivasi ketika mendapatkan ancaman dari para leader, namun yakinlah itu hanya sementara. Maka para leader perlu menghindarkan timnya dari intimidasi.(Wijiatmoko)
+                </p>
               <ul>
-                <li>Artikel 1</li>
+                <li><a href="artikel.html">3 Hal Yang Menjebak Para Leader</a></li>
                 <li>Artikel 2</li>
                 <li>Artikel 3</li>
                 <li>Artikel 4</li>
