--- a/pages/single.html
+++ b/pages/single.html
@@ -89,18 +89,23 @@
             <ol class="breadcrumb">
               <li><a href="#">Home</a></li>
               <li><a href="#">Tema ?</a></li>
-              <li class="active">JUDUL BERITA 1</li>
+              <li class="active">Kunci Maju Kembang Organisasi, Pintu Gerbangnya Seleksi SDM</li>
             </ol>
-            <h2 class="post_titile">JUDUL BERITA 1</h2>
+            <h2 class="post_titile">Kunci Maju Kembang Organisasi, Pintu Gerbangnya Seleksi SDM</h2>
             <div class="single_page_content">
               <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Penulis</a> <span><i class="fa fa-calendar"></i>Jam-tanggal</span> <a href="#"><i class="fa fa-tags"></i>Tema ?</a> </div>
-              <img class="img-center" src="../images/berita2.jpeg" alt="">
-              <p>ISI BERITA.</p>
-              <blockquote> CATATAN PENTING. </blockquote>
-              <p>ISI BERITA </p>
+              <img class="img-center" src="../images/b1(2).jpeg" alt="">
+              <p>Workshop Sekolah SDM di Coffca Cafe diselenggarakan OK.ON berkolaborasi dengan Sekolah SDM Surabaya.Sabtu (5/10/2022)</p>
+              <p>Sholahudin Fahmi selaku founder Sekolah SDM berbagi ilmu dan pengalamannya dalam bidang manajemen SDM pada lembaga pendidikan dan UMKM agar mampu mengembangkan organisasi dengan melakukan seleksi pegawai sesuai dengan value dan tujuan organisasi.</p>
+              <p>"Jangan salah menerima orang dan jangan salah menolak orang", ungkapnya.</p>
+              <blockquote>"Jangan salah menerima orang dan jangan salah menolak orang", ungkapnya. </blockquote>
+              <p>Salah satu peserta bapak Eko owner Baraka tekstil mengatakan "Perusahaan untuk berkembang dan bertumbuh diperlukan seleksi SDM yang tepat".</p>
+              <p>Desiana utusan dari Yayasan Insan Alima "Dengan mengikuti pelatihan teknik wawancara dapat  meningkatkan kemampuannya dalam melakukan proses seleksi di lembaga pendidikannya".</p>
+              <p>Bapak Qosim owner PPTQ Al Qosimi Center menyampaikan "Mengajak para pengelola lembaga pendidikan untuk terus belajar dan meningkatkan kapasitas dalam pengelolaan lembaga pendidikannya".</p>
+              <p>#kotasolo</p>
               <ul>
-                <li>berita 1</li>
-                <li>berita 2</li>
+                <li><a href="single.html">Kunci Maju Kembang Organisasi, Pintu Gerbangnya Seleksi SDM</a></li>
+                <li><a href="single2.html">Spesial Ayah dan Perannya</a></li>
                 <li>berita 3</li>
                 <li>berita 4</li>
                 <li>berita 5</li>
@@ -121,8 +126,8 @@
             <div class="pagincontent"> <span>Post Sebelumnya</span> <a href="D:\FULL US PROJECT\revisi1ME/index.html">Home Page</a> </div>
           </div>
           <div class="next">
-            <div class="pagincontent"> <span>Post Selanjutnya</span> <a href="D:\FULL US PROJECT\revisi1ME\pages/single2.html">Berita 2</a> </div>
-            <a class="angle_right" href="#"><i class="fa fa-angle-double-right"></i></a> </div>
+            <div class="pagincontent"> <span>Post Selanjutnya</span> <a href="single2.html">Spesial Ayah dan Perannya</a> </div>
+            <a class="angle_right" href="single2.html"><i class="fa fa-angle-double-right"></i></a> </div>
         </div>
         <div class="share_post"> <a class="facebook" href="#"><i class="fa fa-facebook"></i>Facebook</a> <a class="twitter" href="#"><i class="fa fa-twitter"></i>Twitter</a> <a class="googleplus" href="#"><i class="fa fa-google-plus"></i>Google+</a> <a class="linkedin" href="#"><i class="fa fa-linkedin"></i>LinkedIn</a> <a class="stumbleupon" href="#"><i class="fa fa-stumbleupon"></i>StumbleUpon</a> <a class="pinterest" href="#"><i class="fa fa-pinterest"></i>Pinterest</a> </div>
         <div class="similar_post">
