--- a/pages/single2.html
+++ b/pages/single2.html
@@ -85,18 +85,21 @@
             <ol class="breadcrumb">
               <li><a href="#">Home</a></li>
               <li><a href="#">Tema ?</a></li>
-              <li class="active">JUDUL BERITA </li>
+              <li class="active">Spesial Ayah dan Perannya</li>
             </ol>
-            <h2 class="post_titile">JUDUL BERITA</h2>
+            <h2 class="post_titile">Spesial Ayah dan Perannya</h2>
             <div class="single_page_content">
-              <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Tema ?</a> </div>
-              <img class="img-center" src="../images/berita3.jpeg" alt="">
-              <p>ISI BERITA.</p>
-              <blockquote> CATATAN PENTING. </blockquote>
-              <p>ISI BERITA </p>
+              <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wijiatmoko</a> <span><i class="fa fa-calendar"></i>14/11/2022/span> <a href="#"><i class="fa fa-tags"></i>Tema ?</a> </div>
+              <img class="img-center" src="../images/b3.jpeg" alt="">
+              <p>Seminar spesial ayah diselenggarakan SDIT Ar Risalah Surakarta di Graha Sejahtera Cemani Sukoharjo. Sabtu (12/11/2022)</p>
+              <p>"Kegiatan ini bertepatan dengan hari ayah. Dan juga untuk mengajak para ayah untuk lebih peduli pada anak, dan tidak hanya menyerahkan secara penuh pada Ibunya," ungkap Bapak Sudrajat selaku kepala sekolah.</p>      
+              <p>"Sebab ayah memiliki karakter ketegasan dan kepemimpinan yang juga harus melekat pada anak-anak," tambahnya.</p>        
+              <blockquote>"Sebab ayah memiliki karakter ketegasan dan kepemimpinan yang juga harus melekat pada anak-anak," tambahnya.</blockquote>
+              <p>Ustadz Abu Fatiah -Al Adnani selaku pemateri menyampaikan "Ilmu parenting tak bisa diterapkan secara copy paste, namun dibutuhkan kemampuan orang tua atau ayah untuk memahami potensi anak dan mengembangkan sesuai potensinya sesuai dengan syariat Islam".</p>
+              <p>"Sekolah dan orang tua seperti dua sayap, dimana dua-duanya harus mengepak untuk membawa anak pada tujuan yaitu bahagia dunia dan akhirat," tambahnya.</p>
               <ul>
-                <li>berita 1</li>
-                <li>berita 2</li>
+                <li><a href="single.html">Kunci Maju Kembang Organisasi, Pintu Gerbangnya Seleksi SDM</a></li>
+                <li><a href="single2.html">Spesial Ayah dan Perannya</a></li>
                 <li>berita 3</li>
                 <li>berita 4</li>
                 <li>berita 5</li>
@@ -114,7 +117,7 @@
         </div>
         <div class="post_pagination">
           <div class="prev"> <a class="angle_left" href="#"><i class="fa fa-angle-double-left"></i></a>
-            <div class="pagincontent"> <span>Post Sebelumnya</span> <a href="D:\FULL US PROJECT\revisi1ME\pages/single.html">Berita 1</a> </div>
+            <div class="pagincontent"> <span>Post Sebelumnya</span> <a href="single.html" style="text">Kunci Maju Kembang Organisasi, Pintu Gerbangnya Seleksi SDM</a> </div>
           </div>
           <div class="next">
             <div class="pagincontent"> <span>Post Selanjutnya</span> <a href="#">Berita 3</a> </div>
